--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,9 @@
             <li><a href="/about"><i class="fas fa-address-card"></i> About</a></li>
             <li><a href="/faq"><i class="fas fa-question"></i> FAQ</a></li>
             <li><a href="/contact"><i class="fas fa-address-book"></i> Contact</a></li>
+            <li>
+              <a href="/profile"><i class="fas fa-address-book"></i> Profile Page</a>
+            </li>
            
         </ul> 
         <div class="social_media">
