--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -35,6 +35,9 @@
           <li>
             <a href="/contact"><i class="fas fa-address-book"></i> Contact</a>
           </li>
+          <li>
+            <a href="/profile"><i class="fas fa-address-book"></i> Profile Page</a>
+          </li>
         </ul>
         <div class="social_media">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
