added new language

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -58,6 +58,7 @@
                           <option name="roomId" value="Arabic">Arabic</option>
                           <option name="roomId"  value="English">English</option>
                           <option name="roomId" value="French">French</option>
+                          <option name="roomId" value="Kinyarwanda">Kinyarwanda</option>
                           <option name="roomId" value="Chinese">Chinese</option>
                           <option name="roomId"  value="Russian">Russian</option>
                         </select> 
@@ -70,7 +71,7 @@
             </div>
         </div>
     </div>
-  
+    
 <script src="main.js"></script>
 
 </body>
